--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Build the Docker image
-      run: docker build -t ghcr.io/vordenken/$GITHUB_REPOSITORY/theframe-art:latest .
+      run: docker build -t ghcr.io/$GITHUB_REPOSITORY/theframe-art:latest .
       
     - name: Login to GitHub Container Registry
       run: echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin
